Tidy-up tests.